--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -329,6 +329,8 @@
     <addaction name="separator"/>
     <addaction name="actionStart"/>
     <addaction name="actionStop"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_into_Excel"/>
    </widget>
    <addaction name="menuProject"/>
   </widget>
@@ -346,6 +348,11 @@
   <action name="actionStop">
    <property name="text">
     <string>Stop</string>
+   </property>
+  </action>
+  <action name="actionSave_into_Excel">
+   <property name="text">
+    <string>Save into Excel</string>
    </property>
   </action>
  </widget>
