--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -339,20 +339,32 @@
    <property name="text">
     <string>Open Config</string>
    </property>
+   <property name="shortcut">
+    <string>F2</string>
+   </property>
   </action>
   <action name="actionStart">
    <property name="text">
     <string>Start</string>
+   </property>
+   <property name="shortcut">
+    <string>F4</string>
    </property>
   </action>
   <action name="actionStop">
    <property name="text">
     <string>Stop</string>
    </property>
+   <property name="shortcut">
+    <string>F5</string>
+   </property>
   </action>
   <action name="actionSave_into_Excel">
    <property name="text">
     <string>Save into Excel</string>
+   </property>
+   <property name="shortcut">
+    <string>F12</string>
    </property>
   </action>
  </widget>
